Fixed collapsed navbar logo position

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,6 +101,7 @@ aside {
         color: $theme-primary;
         @include sans-serif-font;
         font-weight: 700;
+        padding: 0px;
         // text-transform: uppercase;
         &:hover,
         &:focus {
@@ -137,6 +138,7 @@ aside {
         .navbar-header .navbar-brand {
             color: rgba(white, .7);
             // width: 20%;
+            padding: 10px 0px;
             &:hover,
             &:focus {
                 color: white;
